# ssh-socks-cli

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: SPEC.md
src/ssh_socks_cli/: __init__.py  __main__.py  cli.py  config.py  firefox.py  health.py  paths.py  route.py  service.py  tunnel.py  watchdog.py
tests/: test_cli.py  test_config.py  test_firefox.py  test_health.py  test_paths.py  test_route.py  test_service.py  test_tunnel.py  test_watchdog.py
