[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ssh-socks-cli"
version = "0.1.0"
description = "Cross-platform CLI that manages an SSH-based SOCKS5 tunnel so Firefox can bypass corporate VPNs (GlobalProtect, AnyConnect, Zscaler, ...)"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Sergio Rojas", email = "sergioarojasm98@users.noreply.github.com" }]
keywords = [
  "ssh",
  "socks5",
  "proxy",
  "tunnel",
  "split-tunnel",
  "corporate-vpn",
  "globalprotect",
  "firefox",
  "autossh",
  "cli",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: Proxy Servers",
  "Topic :: System :: Networking",
  "Topic :: Utilities",
]
dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
]

[project.scripts]
ssh-socks = "ssh_socks_cli.cli:app"

[project.urls]
Homepage = "https://github.com/sergioarojasm98/ssh-socks-cli"
Repository = "https://github.com/sergioarojasm98/ssh-socks-cli"
Issues = "https://github.com/sergioarojasm98/ssh-socks-cli/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ssh_socks_cli"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF",
]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
